[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/main/title_screen/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/TitleScreenTheme.tres" type="Theme" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.612183
margin_top = 0.61216
margin_right = -0.612183
margin_bottom = 0.612183
rect_scale = Vector2( 1.00011, 1.00324 )
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 452.0
margin_top = 207.0
margin_right = 572.0
margin_bottom = 393.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 120.0
margin_bottom = 32.0
text = "Demonkill"
align = 1
valign = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 120.0
margin_bottom = 42.0

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 120.0
margin_bottom = 90.0
text = "Play"

[node name="DungeonButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 120.0
margin_bottom = 138.0
text = "Dungeon Generator"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 148.0
margin_right = 120.0
margin_bottom = 186.0
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayButton" to="." method="_on_new_Game_button_pressed"]
